bk_ida/gccida/c1/prescan_loop
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/prescan_loop/src/loop.c:2922:12: error: expected expression
*( _OWORD *)( aux + 8) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/prescan_loop/src/loop.c:2922:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( aux + 8) = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/prescan_loop/src/loop.c:2940:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = ( rtx)v7[1]; 
           ^~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/prescan_loop/src/loop.c:2962:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v11 = ( __int64)v10[1]; 
                ^~~~~~
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/prescan_loop/src/obj/loop.o] Error 1
